--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 .main{
-  height: 600px;
-  width:1200px;
+  height: 620px;
+  width:1140px;
   align-content: center;
 }
 .jumbotron{
-  background-color: #9AADBF;
+  background-image: url('model.jpg');
 }
 .card-text{
   font-family: 'Fira Sans', Sans-Serif;
@@ -16,4 +16,11 @@
 }
 .card-body{
   background-color: #547AA5;
+}
+.card-img-top{
+  height:286px;
+  weight:286px;
+}
+h1{
+  font-family: 'Faster One', cursive;
 }
